# portfolio

./: .env.example  .gitignore  README.md  caddy_8080.pp  caddy_8080.te  gunicorn.conf.py  log  manage.py  pyproject.toml  requirements.in  requirements.txt  requirements_raw.txt
erikwalther/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py
portfolio/: admin.py  models.py  urls.py  views.py
portfolio/migrations/: 0001_initial.py  0002_alter_project_featured_image.py  0003_project_description_html_alter_project_description_and_more.py  0004_siteintro.py  0005_alter_siteintro_options_alter_siteintro_intro_html_and_more.py
static/css/: admin.css  main.css  project_styles.css  variables.css
templates/: 403.html  404.html  500.html  base.html  privacy_policy.html  project_page.html
templates/admin/: base_site.html  change_form.html
templates/admin/portfolio/project/: change_form.html
templates/admin/portfolio/projectpage/: change_form.html
templates/admin/portfolio/siteintro/: change_form.html
templates/portfolio/: homepage.html  project_detail.html  project_page.html  projects.html
