[project]
name = "erikwalther-portfolio"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "bleach>=6.3.0",
    "django",
    "gunicorn",
    "markdown>=3.10.2",
    "pillow>=12.1.1",
    "psycopg2-binary",
    "python-decouple",
    "whitenoise",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["erikwalther"] 
