[project]
name = "erikwalther-portfolio"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0,<7.0",
    "gunicorn",
    "psycopg2-binary",
    "python-decouple",
    "whitenoise",
    "markdown>=3.4",
    "Pillow>=10.0",
    "nh3>=0.3.4",
    "Pygments>=2.18",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
    packages = ["erikwalther"]
